updated navbar to stick to bottom of screen, added whitespace margin above it to prevent content overlap

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,9 +1,8 @@
 .navbar-container {
-  position: sticky;
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 50px;
-  margin-top: 30px;
   background-color: pink;
   display: grid;
   grid-template-areas: 'entries new settings logout';
@@ -32,4 +31,8 @@
   background: transparent;
   border: none;
   cursor: pointer;
+}
+
+.whitespace {
+  margin-top: 100px;
 }
